<resources>
    <string name="app_name">BarTap</string>
    <string name="tengo_un_bar">Tengo un bar</string>
    <string name="comenzar">Comenzar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="no_encontras_titulo">¿No encontras el bar que buscas?</string>
    <string name="no_encontras_link">¡Agregalo por tu cuenta!</string>
    <string name="buscar">Buscar</string>
    <string name="filtrar">Filtrar</string>
    <string name="listo">¡Listo!</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="seleccionar_ubicacion">Seleccionar Ubicacion</string>
    <string name="nombre">Nombre</string>
    <string name="agregar_un_bar">Agregar un bar</string>
    <string name="estrellas">Estrellas</string>
    <string name="distancia">Distancia</string>
    <string name="ordenar_por">Ordenar por:</string>
    <string name="filtros">Filtros</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="cancelar">Cancelar</string>
    <string name="texto_confirmacion">Se ha enviado el bar que creaste para su revision. Proximamente lo veras con el resto</string>
    <string name="continuar">Continuar</string>
    <string name="aun_no_tenes_un_bar_asociado">Aun no tenes un bar asociado.</string>
    <string name="crear">Crear</string>
    <string name="crear_juego">Crear Juego</string>
    <string name="agrega_tu_bar">Agrega tu bar</string>
    <string name="metodos_de_pago">Metodos de pago</string>
    <string name="hasta">Hasta</string>
    <string name="desde">Desde</string>
    <string name="happy_hour_opcional">Happy Hour (opcional)</string>
    <string name="horarios">Horarios</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta_de_credito">Tarjeta de Credito</string>
    <string name="tarjeta_de_debito">Tarjeta de Debito</string>
    <string name="contactate">¡Contactate!</string>
    <string name="contacto_text">¿Alguna sugerencia?¿Queres dejar un comentario?</string>
    <string name="esta_abierto">Esta abierto</string>
    <string name="happy_hour">Happy Hour</string>
    <string name="comentario_enviado">Comentario enviado</string>
    <string name="enviando">Enviando…</string>
    <string name="necesitas_cuenta_favoritos">Necesitas una cuenta para agregar este bar a tus favoritos.</string>
    <string name="necesitas_cuenta_calificar">Necesitas una cuenta para calificar este bar.</string>
    <string name="calificar_bar">Calificar Bar</string>
    <string name="ver_mas">Ver Mas</string>
    <string name="no_hay_resultados">No hay resultados.</string>
    <string name="bares">Bares</string>
    <string name="juegos">Juegos</string>
    <string name="mis_favoritos">Mis Favoritos</string>
    <string name="editar_bar">Editar Bar</string>
    <string name="se_requiere_cuenta">Se requiere cuenta</string>
    <string name="crear_desafio">Crear Desafio</string>
    <string name="crear_trivia">Crear Trivia</string>
    <string name="dificil">Dificil</string>
    <string name="medio">Medio</string>
    <string name="facil">Facil</string>
    <string name="participar">Participar</string>
    <string name="necesitas_cuenta_participar">Necesitas una cuenta para participar del juego.</string>
    <string name="lista_de_participantes">Lista de participantes:</string>
    <string name="deseas_declarar_ganador">¿Deseas declarar a este usuario como ganador del juego?</string>
    <string name="ok">OK</string>
    <string name="exito_participar_juego">¡Exito! Ya estas participando en el juego.</string>
    <string name="mi_tienda">Mi Tienda</string>
    <string name="crear_nuevo_item">Crear nuevo item</string>
    <string name="es_un_desafio_de_unico_ganador">¿Es un desafio de unico ganador?</string>
    <string name="comprar">Comprar</string>
    <string name="actual">Actual:</string>
    <string name="costo">Costo:</string>
    <string name="total">Total:</string>
    <string name="necesitas_cuenta_tienda">Necesitas una cuenta para ver la tienda de este bar</string>
    <string name="debe_ingresar_titulo_trivia">Debe ingresar un titulo breve para la trivia</string>
    <string name="debe_ingresar_cant_preguntas_trivia">Debe ingresar la cantidad de preguntas de la trivia</string>
    <string name="out_of_bounds_cant_preguntas_trivia">Cantidad de preguntas: Minimo 1 - Maximo 10</string>
    <string name="ingrese_un_breve_titulo_o_descripcion_para_la_trivia">Ingrese un breve titulo o descripcion para la trivia:</string>
    <string name="breve_titulo">Breve titulo</string>
    <string name="ingrese_la_cantidad_de_preguntas_de_la_trivia">Ingrese la cantidad de preguntas de la trivia:</string>
    <string name="bounds_trivia">Min. 1 - Max. 10</string>
    <string name="debe_ingresar_numero_preguntas_trivia">Debe ingresar un numero para la cantidad de preguntas</string>
    <string name="siguiente_pregunta">Siguiente Pregunta</string>
    <string name="debe_seleccionar_opcion_correcta">Debe seleccionar la opcion correcta antes de continuar.</string>
    <string name="no_debe_dejar_campos_vacios">No debe dejar campos vacios.</string>
    <string name="enviando_trivia">Enviando trivia…</string>
    <string name="ya_participaste_juego">Ups! Ya participaste de este juego.</string>
    <string name="texto_perdedor_trivia">¡Ups! Has perdido.</string>
    <string name="texto_ganador_trivia">¡Felicidades! Ganaste la trivia.</string>
    <string name="cantidad_de_ganadores">Cantidad de Ganadores:</string>
    <string name="total_de_participantes">Total de participantes:</string>
    <string name="dejar_de_participar">Abandonar juego</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="mis_juegos">Mis Juegos</string>
    <string name="mis_compras">Mis Compras</string>
    <string name="guardados">Guardados</string>
    <string name="contacto">Contacto</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="salir">Salir</string>
    <string name="tu_compra_fue_un_exito">¡Tu compra fue un exito!</string>
    <string name="recordatorio_compra">(Recorda que luego podes ver la compra en la seccion Mis Compras)</string>
    <string name="no_tenes_puntos_suficientes_para_comprar_este_item">No tenes puntos suficientes para comprar este item.</string>
    <string name="ver_mis_items_vendidos">Ver mis items vendidos</string>
    <string name="canjear_compra_desea_continuar">Al clickear \'Validar\' se considera que el usuario ya canjeo su descuento   ¿Desea continuar?</string>
    <string name="validar">Validar</string>
    <string name="cerrado_este_dia">¿Cerrado este dia?</string>
    <string name="entre_que_horarios_esta_abierto_el_bar">¿Entre que horarios esta abierto el bar?</string>
    <string name="hint_desafios_title">Aca hay algunas ideas…</string>
    <string name="cerrado">Cerrado</string>
    <string name="horarios_del_happy_hour">¿Horarios del Happy Hour?</string>
    <string name="descripcion">Descripcion</string>
    <string name="una_peque_a_descripcion">Una pequeña descripcion:</string>
    <string name="nombre_del_bar">Nombre del bar:</string>
    <string name="debes_completar_horarios_antes_de_continuar">Debes completar los horarios antes de continuar</string>
    <string name="exito">¡Exito!</string>
    <string name="ingresar_con_google">Ingresar con google</string>
    <string name="ingresar_con_email">ingresar con email</string>
    <string name="correcto">¡Correcto!</string>
    <string name="aun_sin_descripcion">Aun sin descripcion</string>
    <string name="ocurrio_error_inesperado">Ocurrio un error inesperado</string>
    <string name="no_elegiste_imagen">No elegiste ninguna imagen.</string>
    <string name="se_debe_asignar_imagen_principal">Se debe asignar una imagen principal para el bar!</string>
    <string name="falta_descripcion_para_bar">Falta una descripcion para el bar!</string>
    <string name="falta_nombre_bar">Falta el nombre del bar!</string>
    <string name="no_se_encontro_direccion">No se encontro direccion</string>
    <string name="no_se_puede_obtener_direccion">No se puede obtener direccion</string>
    <string name="ubicacion_desconocida">Ubicacion Desconocida</string>
    <string name="mas_fotos">Mas Fotos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mis_ventas">Mis Ventas</string>
    <string name="juegos_del_bar">Juegos del Bar</string>
    <string name="juegos_donde_participas">Juegos donde participas</string>
    <string name="falta_ubicacion_bar">Falta una ubicacion para el bar!</string>
    <string name="bares_tienen_nombre_parecido">Los siguientes bares fueron agregados por usuarios y tienen un nombre parecido al que ingresaste.</string>
    <string name="deseas_reclamar_alguno">¿Deseas reclamar alguno como el tuyo?</string>
    <string name="no_deseo_reclamar_bar">No deseo reclamar ningun bar</string>
    <string name="deseas_reclamar_este_bar">¿Deseas reclamar este bar?</string>
    <string name="reclamar">Reclamar</string>
    <string name="reclamar_bar">Reclamar Bar</string>
    <string name="telefono">Telefono</string>
    <string name="debes_ingresar_telefono">Debes ingresar un telefono!</string>
    <string name="ver_horarios">Ver Horarios</string>
    <string name="volver">Volver</string>
    <string name="comentarios_y_calificaciones">Comentarios/Calificaciones</string>
    <string name="aun_no_hay_comentarios_en_este_bar">Aun no hay comentarios en este bar. ¡Se el primero!</string>
    <string name="no_ubicacion_intente_nuevamente">No se pudo obtener una ubicacion, intente nuevamente</string>
    <string name="tipu_1">Si tenés alguna idea o sugerencia no dudes en expresarla en \"Contacto\".</string>
    <string name="tipu_2">¿No aparece tu bar favorito? ¡Vos mismo podés agregarlo!</string>
    <string name="tipu_3">No olvides dejar tus comentarios y calificaciones en los bares que visitas.</string>
    <string name="tipu_4">¡Busca el juego que más te guste y participa! Conseguirás puntos para canjear en el bar.</string>
    <string name="tipb_1">Recorda que podés poner descuentos en la tienda, los usuarios canjearán sus puntos en ella.</string>
    <string name="tipb_2">A los usuarios les gustan los juegos, ¡No olvides crear los tuyos!</string>
    <string name="tipb_3">No olvides que, una vez terminado un desafío del bar, debes declarar un ganador.</string>
    <string name="share_text">Te invito a probar la aplicacion BarTap! https://play.google.com/store/apps/details?id=com.eriochrome.bartime</string>
    <string name="compartir">Compartir</string>
    <string name="ver_en_mapa">Ver en mapa</string>
    <string name="intro_u1_des">Navega y encontrá el que más te guste, filtra hasta quedarte solo lo mejor</string>
    <string name="intro_u2_des">¡Los bares tienen juegos! Participa para ganar puntos</string>
    <string name="intro_u3_des">Los puntos que conseguiste serviran para comprar descuentos en la tienda del bar</string>
    <string name="intro_u1_tit">Encontra Bares</string>
    <string name="intro_u2_tit">Juga Juegos</string>
    <string name="intro_u3_tit">Consegui Descuentos</string>
    <string name="intro_b1_tit">Cuenta del Bar</string>
    <string name="intro_b2_tit">Juegos</string>
    <string name="intro_b3_tit">Tienda</string>
    <string name="intro_b1_des">Completa la informacion para que los usuarios puedan encontrar el bar en sus busquedas</string>
    <string name="intro_b2_des">Podes crear juegos, los usuarios participaran ¡No olvides nombrar al ganador para que se le acrediten sus puntos!</string>
    <string name="intro_b3_des">Tu bar tendra una tienda, los usuarios pueden gastar sus puntos en los descuentos que agregues</string>
    <string name="crear_sorteo">Crear Sorteo</string>
    <string name="sorteo">Sorteo</string>
    <string name="trivia">Trivia</string>
    <string name="desafio">Desafio</string>
</resources>