<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/iniciar_sesion"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/iniciar_sesion" />
        <item
            android:id="@+id/juegos"
            android:icon="@drawable/ic_videogame_24dp"
            android:title="@string/mis_juegos" />
        <item
            android:id="@+id/compras"
            android:icon="@drawable/ic_shopping_24dp"
            android:title="@string/mis_compras" />
        <item
            android:id="@+id/guardados"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/guardados" />
        <item
            android:id="@+id/contacto"
            android:icon="@drawable/ic_contacto_24dp"
            android:title="@string/contacto" />
        <item
            android:id="@+id/cerrar_sesion"
            android:icon="@drawable/ic_exit_to_app_violet_24dp"
            android:title="@string/cerrar_sesion" />
        <item
            android:id="@+id/salir"
            android:icon="@drawable/ic_close_24dp"
            android:title="@string/salir" />
    </group>

</menu>