<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.DatosBarOpcionalesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:id="@+id/listo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_violeta"
            android:text="@string/listo"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/metodos_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/metodos_de_pago"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/efectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metodos_pago"
            android:layout_centerHorizontal="true"
            android:minWidth="250dp"
            android:text="@string/efectivo" />

        <CheckBox
            android:id="@+id/tarjeta_credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/efectivo"
            android:layout_centerHorizontal="true"
            android:minWidth="250dp"
            android:text="@string/tarjeta_de_credito" />

        <CheckBox
            android:id="@+id/tarjeta_debito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tarjeta_credito"
            android:layout_centerHorizontal="true"
            android:minWidth="250dp"
            android:text="@string/tarjeta_de_debito" />
    </RelativeLayout>
</FrameLayout>